@@ -2,7 +2,7 @@
  * **************************************************-
  * Ingrid Portal Apps
  * ==================================================
- * Copyright (C) 2014 - 2022 wemove digital solutions GmbH
+ * Copyright (C) 2014 - 2023 wemove digital solutions GmbH
  * ==================================================
  * Licensed under the EUPL, Version 1.1 or – as soon they will be
  * approved by the European Commission - subsequent versions of the
@@ -79,7 +79,7 @@ public class IngridSessionPreferences extends HashMap {
         try {
             obj = get(key);
             if (obj == null) {
-                obj = cl.newInstance();
+                obj = cl.getDeclaredConstructor().newInstance();
                 put(key, obj);
             }
         } catch (Exception e) {
